fix some IDE lintings