@@ -226,7 +226,7 @@ public class AssetControllerTest {
         if (assetMeta.getValidatorDids() != null && !assetMeta.getValidatorDids().isEmpty()) {
             result =  mockMvc.perform(MockMvcRequestBuilders.get("/assets")
                     .accept(MediaType.APPLICATION_JSON)
-                    .queryParam("validators", assetMeta.getValidatorDids().stream().collect(Collectors.joining(","))))
+                    .queryParam("validators", String.join(",", assetMeta.getValidatorDids())))
                     .andExpect(status().isOk())
                     .andReturn();
             assets = objectMapper.readValue(result.getResponse().getContentAsString(), Assets.class);
@@ -944,7 +944,7 @@ public class AssetControllerTest {
     public void validateAssets_tooManyAssetIds_returnsBadRequest() throws Exception {
         List<String> twentyOneIds = java.util.stream.IntStream.range(0, 21)
                 .mapToObj(i -> "urn:uuid:00000000-0000-0000-0000-" + String.format("%012d", i))
-                .collect(Collectors.toList());
+            .toList();
         mockMvc.perform(MockMvcRequestBuilders.post("/assets/validate")
                         .with(csrf())
                         .contentType(MediaType.APPLICATION_JSON)
